# AMR

./: .gitignore  README.md  compare_lineouts.py  pyproject.toml  save_mesh.py  thermal_equation.py
export/mesh-amr-r1/: lineout_0000.curve  lineout_0001.curve  lineout_0002.curve  lineout_0003.curve  lineout_0004.curve  lineout_0005.curve  lineout_0006.curve  lineout_0007.curve  lineout_0008.curve  lineout_0009.curve  lineout_0010.curve  lineout_0011.curve  lineout_0012.curve  lineout_0013.curve  lineout_0014.curve  lineout_0015.curve  lineout_0016.curve  lineout_0017.curve  lineout_0018.curve  lineout_0019.curve  lineout_0020.curve  lineout_0021.curve  lineout_0022.curve  lineout_0023.curve  lineout_0024.curve  lineout_0025.curve  lineout_0026.curve  lineout_0027.curve  lineout_0028.curve  lineout_0029.curve  lineout_0030.curve  lineout_0031.curve  lineout_0032.curve  lineout_0033.curve  lineout_0034.curve  lineout_0035.curve  lineout_0036.curve  lineout_0037.curve  lineout_0038.curve  lineout_0039.curve  (+161 more)
export/mesh-amr-r2/: lineout_0000.curve  lineout_0001.curve  lineout_0002.curve  lineout_0003.curve  lineout_0004.curve  lineout_0005.curve  lineout_0006.curve  lineout_0007.curve  lineout_0008.curve  lineout_0009.curve  lineout_0010.curve  lineout_0011.curve  lineout_0012.curve  lineout_0013.curve  lineout_0014.curve  (+186 more)
output/: mesh.vtk  mesh_t0.vtk  mesh_t1.vtk
src/: benchmark.py  mesh.py  node.py  refinement.py  scheme.py  some_module.py  tree.py
tests/: benchmark_test.py  mesh_test.py  node_refinement_test.py  node_test.py  some_module_test.py
(+201 files in other folders)
