[project]
name = "amr"
version = "0.1.0"
description = "The aim of this project is to develop a simplified version of the Adaptive Mesh Refinement (AMR) algorithm."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=6.1.0",
    "pytest>=8.3.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
